--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.6.0",
+    "@savchenko91/schema-validator": "^0.0.0",
     "prisma": "3.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
