--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "ts-loader": "^9.2.3",
     "ts-node": "10.7.0",
     "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "uuid-random": "^1.3.2"
   },
   "jest": {
     "moduleFileExtensions": [
